2.3.2
-----
1. Store actual song path for local files (mainly affects windows)
2. When using Track Organizer to rename music tracks, rename any other files
   that have the same basename as the music file.

2.3.1
-----
 1. Update some translations.
 2. Set Smart rules 'files added in the last days' limit to 10*365
 3. Only sort playlists in folders view, and place these after tracks.
 4. Reduce width of statusbar spacer.
 5. Move scrobling 'love' button into toolbar. Use unfilled heart before loved,
    and filled when loved.
 6. Better control of playqueue status bar buttons when contracting/expanding.
 7. For windows, when adding local files (served via internal HTTP server) add
    the real file path as a query item.
 8. Use smaller text for help text in Tweaks section of preferences dialog.
 9. Fix playback of local non-MPD files under Windows.
10. Stretching albums covers not working under Windows, so just remove option.
11. Don't enable AA_EnableHighDpiScaling for windows builds, seems to
    interfere with fractional scaling.
12. When playing, only poll MPD every 5 seconds.
13. When updating play seekbar from MPDStatus, only upate if more than 1
    second from calculated position.
14. Slightly reduce height of toolbar.
15. Add a slight border to context view.
16. Update suru icon - was a little too small.
17. Don't attempt to align main menu for Windows < 10, as Qt seems to add some
    menu animation that just looks weird when menu is moved.
18. When searching on 'any', do a second search on 'file' and combine results.
    Looks as if MPD does not search filenames/paths when using 'any.'
19. Fix UTF8 file saving under Windows.
20. Fix preference dialog size under windows.
21. Fix enabling of add/replace play queue actions for Jamendo/Magnatune.
22. Use JSON to encode song details when adding online tracks.
23. Don't allow slashes, asterisks, or question marks in collection name.
24. Don't overwrite genre with file type for Jamendo.